Get ready for release.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,18 +2,23 @@
 CHANGES
 =======
 
-1.0.4 (2007-??-??)
+1.0.4 (2007-11-01)
 ------------------
 
 - Resolve ``ZopeSecurityPolicy`` deprecation warning.
 
-1.0.3 (2007-??-??)
+1.0.3 (2007-09-11)
 ------------------
 
 - Remedy brown-bag 1.0.2-release: Someone already released 1.0.2-r* instead of
   a .dev release making the 1.0.2 final too old. :/
 
-1.0.2 (2007-??-??)
+1.0.2 (2007-09-11)
 ------------------
 
 - Helping libxml2 with some encoding guesswork.
+
+1.0.0 (2007-01-12)
+------------------
+
+- Initial release.
