--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 CHANGES
 =======
 
+1.1 (unreleased)
+----------------
+
+- Added `pretty_print` function to allow somewhat pretty formatted output of
+  HTML.
+
 1.0.4 (2007-11-01)
 ------------------
 
