--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,14 +2,16 @@
 CHANGES
 =======
 
-1.3 (unreleased)
-----------------
+1.3.0 (2009-07-23)
+------------------
+
+- Updgraded pacakge to lxml 2.2.
 
 - Fixed bug with `normalized_contents` which would break the `open` function
   of test browser if content wasn't parsable as HTML/XML.
 
-1.2 (2008-05-29)
-----------------
+1.2.0 (2008-05-29)
+------------------
 
 - Added `normalized_contents` attribute that reindents and normalizes the
   etree structure of a document and allows easier to read HTML/XML examples in
