--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,12 +3,12 @@ CHANGES
 =======
 
 1.4.0 (unreleased)
-------------------
+==================
 
-- ...
+- Added doctest to `long_description` to show up on pypi.
 
 1.3.0 (2009-07-23)
-------------------
+==================
 
 - Updgraded pacakge to lxml 2.2.
 
@@ -16,7 +16,7 @@ CHANGES
   of test browser if content wasn't parsable as HTML/XML.
 
 1.2.0 (2008-05-29)
-------------------
+==================
 
 - Added `normalized_contents` attribute that reindents and normalizes the
   etree structure of a document and allows easier to read HTML/XML examples in
