--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,8 @@ CHANGES
 1.3.2 (unreleased)
 ==================
 
-- Nothing changed yet.
+- Took zope.securitypolicy refactoring and zope.testing.doctest deprecation
+  into account.
 
 
 1.3.1 (2010-01-18)
