Drop the `zope.app.testing` extra.
It dropped its special ``zope.testbrowser`` support and we do not need it for
our tests or code any more.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,8 +2,14 @@
 CHANGES
 =======
 
-2.1 (unreleased)
+3.0 (unreleased)
 ================
+
+Backwards incompatible changes
+------------------------------
+
+- Drop the ``zope.app.testing`` extra introduced in version 2.0.0 as
+  it dropped its special ``zope.testbrowser`` support.
 
 - Adapt the code to newer ``lxml`` versions which no longer raise an exception
   if the string to be parsed by ``lxml.etree`` is empty. We now raise a
