Deprecate ``z3c.etestbrowser.wsgi``.
It used to contain the WSGI variant but this is now the default.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,6 +8,12 @@ CHANGES
 Backwards incompatible changes
 ------------------------------
 
+- Add support for ``zope.testbrowser >= 5.0`` which speaks WSGI this requires
+  tests to be updated to WSGI.
+
+- Deprecate ``z3c.etestbrowser.wsgi`` which used to contain the WSGI variant
+  as it is now the default.
+
 - Drop the ``zope.app.testing`` extra introduced in version 2.0.0 as
   it dropped its special ``zope.testbrowser`` support.
 
